--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compileSdkVersion = 28
-        targetSdkVersion = compileSdkVersion
+        compileSdkVersion = 30
+        targetSdkVersion = 28
 
-        kotlinVersion = "1.2.60"
+        kotlinVersion = "1.4.21"
         ktxVersion = "0.3"
     }
 
@@ -13,7 +13,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
