--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -36,8 +36,8 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     implementation "androidx.core:core-ktx:$rootProject.ext.ktxVersion"
-    implementation "com.android.support:appcompat-v7:28.0.0-rc01"
+    implementation "com.android.support:appcompat-v7:28.0.0"
     implementation "com.android.billingclient:billing:1.1"
 }
