--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -38,6 +38,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     implementation "androidx.core:core-ktx:$rootProject.ext.ktxVersion"
-    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "com.android.billingclient:billing:1.1"
 }
